--- a/lab1/IE402_LAB01_Nhom3.html
+++ b/lab1/IE402_LAB01_Nhom3.html
@@ -46,7 +46,7 @@
 				attributes: data,
 				popupTemplate: data.popupTemplate
 			});
-		}; 
+		}; v
 
         // Create a graphics layer
         var graphicsLayer = new GraphicsLayer();
@@ -54,6 +54,7 @@
         
     });
   </script>
+  <script src="vinh_long.js"></script>
 </head>
 <body>
   <div id="viewDiv"></div>
