--- a/lab1/Resource/graphic_object.html
+++ b/lab1/Resource/graphic_object.html
@@ -1,10 +1,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>Intro to graphics | Sample | ArcGIS Maps SDK for JavaScript 4.26</title>
+    <meta
+      name="viewport"
+      content="initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <title>
+      Intro to graphics | Sample | ArcGIS Maps SDK for JavaScript 4.26
+    </title>
 
-    <link rel="stylesheet" href="https://js.arcgis.com/4.26/esri/themes/light/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.26/esri/themes/light/main.css"
+    />
     <script src="https://js.arcgis.com/4.26/"></script>
 
     <style>
@@ -19,16 +27,20 @@
     </style>
 
     <script>
-      require(["esri/Map", "esri/views/MapView", "esri/Graphic"], (Map, MapView, Graphic) => {
+      require(["esri/Map", "esri/views/MapView", "esri/Graphic"], (
+        Map,
+        MapView,
+        Graphic
+      ) => {
         const map = new Map({
-          basemap: "hybrid"
+          basemap: "hybrid",
         });
 
         const view = new MapView({
           center: [-80, 35],
           container: "viewDiv",
           map: map,
-          zoom: 3
+          zoom: 3,
         });
 
         /*************************
@@ -39,7 +51,7 @@
         const point = {
           type: "point", // autocasts as new Point()
           longitude: -49.97,
-          latitude: 41.73
+          latitude: 41.73,
         };
 
         // Create a symbol for drawing the point
@@ -49,14 +61,14 @@
           outline: {
             // autocasts as new SimpleLineSymbol()
             color: [255, 255, 255],
-            width: 2
-          }
+            width: 2,
+          },
         };
 
         // Create a graphic and add the geometry and symbol to it
         const pointGraphic = new Graphic({
           geometry: point,
-          symbol: markerSymbol
+          symbol: markerSymbol,
         });
 
         /****************************
@@ -66,21 +78,25 @@
         // First create a line geometry (this is the Keystone pipeline)
         const polyline = {
           type: "polyline", // autocasts as new Polyline()
-          paths: [[-111.3, 52.68], [-98, 49.5], [-93.94, 29.89]]
+          paths: [
+            [-111.3, 52.68],
+            [-98, 49.5],
+            [-93.94, 29.89],
+          ],
         };
 
         // Create a symbol for drawing the line
         const lineSymbol = {
           type: "simple-line", // autocasts as SimpleLineSymbol()
           color: [226, 119, 40],
-          width: 4
+          width: 4,
         };
 
         // Create an object for storing attributes related to the line
         const lineAtt = {
           Name: "Keystone Pipeline",
           Owner: "TransCanada",
-          Length: "3,456 km"
+          Length: "3,456 km",
         };
 
         /*******************************************
@@ -102,18 +118,18 @@
                 type: "fields",
                 fieldInfos: [
                   {
-                    fieldName: "Name"
+                    fieldName: "Name",
                   },
                   {
-                    fieldName: "Owner"
+                    fieldName: "Owner",
                   },
                   {
-                    fieldName: "Length"
-                  }
-                ]
-              }
-            ]
-          }
+                    fieldName: "Length",
+                  },
+                ],
+              },
+            ],
+          },
         });
 
         /***************************
@@ -123,7 +139,12 @@
         // Create a polygon geometry
         const polygon = {
           type: "polygon", // autocasts as new Polygon()
-          rings: [[-64.78, 32.3], [-66.07, 18.45], [-80.21, 25.78], [-64.78, 32.3]]
+          rings: [
+            [-64.78, 32.3],
+            [-66.07, 18.45],
+            [-80.21, 25.78],
+            [-64.78, 32.3],
+          ],
         };
 
         // Create a symbol for rendering the graphic
@@ -133,14 +154,14 @@
           outline: {
             // autocasts as new SimpleLineSymbol()
             color: [255, 255, 255],
-            width: 1
-          }
+            width: 1,
+          },
         };
 
         // Add the geometry and symbol to a new graphic
         const polygonGraphic = new Graphic({
           geometry: polygon,
-          symbol: fillSymbol
+          symbol: fillSymbol,
         });
 
         // Add the graphics to the view's graphics layer
