--- a/lab1/IE402_LAB01_Nhom3.html
+++ b/lab1/IE402_LAB01_Nhom3.html
@@ -82,6 +82,16 @@
       TV_jsondata.points.forEach(function (data) {
         graphicsLayer.add(createGraphic(data));
       });
+
+      LA_jsondata.points.forEach(function (data) {
+        graphicsLayer.add(createGraphic(data));
+      });
+      jsondata.lines.forEach(function (data) {
+        graphicsLayer.add(createGraphic(data));
+      });
+      LA_jsondata.polygons.forEach(function (data) {
+        graphicsLayer.add(createGraphic(data));
+      });
     });
 
   </script>
